[metadata]
name = pulsar_admin
version = 0.0.1
description = pulsar_admin is a python http client for apache pulsar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/protocol-laboratory/pulsar-admin-python.git
author = ZhangJian He
author_email = shoothzj@gmail.com
license = Apache License 2.0

[options]
packages = find:

[options.packages.find]
where = pulsar_admin
